# fribidi

./: CMakeLists.txt
gen.tab/: gen-arabic-shaping-tab  gen-arabic-shaping-tab.c
lib/: bidi-type.tab.i  brackets.tab.i  common.h  fribidi-bidi.c  fribidi-common.h  fribidi-run.c  fribidi-unicode.h  fribidi.c  joining-type.tab.i  mirroring.tab.i
